# tratamento_Corp_Solutions

./: README.md  dados_filtrados.csv  pyproject.toml  step_1.ipynb  step_2.ipynb  test.ipynb  testando_bd.ipynb  tratamento_corp_solution.ipynb  upload_bd.ipynb
.ipynb_checkpoints/: dados_filtrados.csv  step_3-checkpoint.ipynb  tratamento_corp_solution-checkpoint.ipynb
Data_Base/: Cor_Raça_Censo_IBGE.xlsx  State of Data 2022 - Modificada.xlsx
Data_Base/Dados_filtrados/: base_dados_filtrados.csv
src/: __init__.py
src/models/: __init__.py  bd.py  entities.py  methods.py  table.py
src/views/: crud.py  index.py  menu.py
