[tool.poetry]
name = "tratamento-corp-solutions"
version = "0.1.0"
description = ""
authors = ["Mauricio Benjamin <mauriciobenjamin700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.20.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
